--- a/ETSMobile/Base.lproj/Main_iPad.storyboard
+++ b/ETSMobile/Base.lproj/Main_iPad.storyboard
@@ -839,10 +839,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="RbO-M4-kUd" firstAttribute="leading" secondItem="Pc2-6d-XYV" secondAttribute="leading" id="AP7-6U-e9P"/>
-                            <constraint firstAttribute="bottom" secondItem="RbO-M4-kUd" secondAttribute="bottom" id="ZTm-FP-Wqp"/>
-                            <constraint firstAttribute="trailing" secondItem="RbO-M4-kUd" secondAttribute="trailing" id="qed-Po-vpf"/>
-                            <constraint firstItem="RbO-M4-kUd" firstAttribute="top" secondItem="gvN-9q-c0h" secondAttribute="bottom" id="zw7-TC-n5Y"/>
+                            <constraint firstItem="aiT-fB-ZVj" firstAttribute="top" secondItem="RbO-M4-kUd" secondAttribute="bottom" id="Nv9-al-gqr"/>
+                            <constraint firstAttribute="trailing" secondItem="RbO-M4-kUd" secondAttribute="trailing" id="bUy-9W-Y8e"/>
+                            <constraint firstItem="RbO-M4-kUd" firstAttribute="leading" secondItem="Pc2-6d-XYV" secondAttribute="leading" id="jdG-y2-xf9"/>
+                            <constraint firstItem="RbO-M4-kUd" firstAttribute="top" secondItem="gvN-9q-c0h" secondAttribute="bottom" id="nhz-mU-wdB"/>
                         </constraints>
                     </view>
                     <toolbarItems>
@@ -892,7 +892,6 @@
         <!--Navigation Controller - Bibliothèque-->
         <scene sceneID="eMJ-jg-krb">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Oho-Xh-xyY" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController definesPresentationContext="YES" id="bLM-Sw-n0V" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Bibliothèque" image="ico_library" id="4Ma-ss-HAP"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="7dM-Fg-tcb">
@@ -902,6 +901,7 @@
                         <segue destination="Bn8-a7-xXR" kind="relationship" relationship="rootViewController" id="dZl-ld-0tC"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Oho-Xh-xyY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2701" y="3472"/>
         </scene>
@@ -1410,8 +1410,8 @@ http://applets.etsmtl.ca</string>
                                     <rect key="frame" x="0.0" y="0.0" width="735" height="259"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit." lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="715" translatesAutoresizingMaskIntoConstraints="NO" id="PES-K9-Wfo">
-                                            <rect key="frame" x="20" y="5" width="715" height="41"/>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="715" translatesAutoresizingMaskIntoConstraints="NO" id="PES-K9-Wfo">
+                                            <rect key="frame" x="20" y="5" width="715" height="26"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="26" id="BtC-2c-HjF"/>
@@ -1419,10 +1419,9 @@ http://applets.etsmtl.ca</string>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="250" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="495" translatesAutoresizingMaskIntoConstraints="NO" id="Fnz-vW-8yd">
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="250" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="495" translatesAutoresizingMaskIntoConstraints="NO" id="Fnz-vW-8yd">
                                             <rect key="frame" x="240" y="77" width="495" height="161"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <string key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rhoncus scelerisque accumsan. Integer quis aliquet quam, id facilisis urna. Mauris sodales, purus quis congue tempor, nulla magna rhoncus massa, sit amet rhoncus ante lorem hendrerit tortor. Ut libero lorem, lacinia vitae nunc quis, iaculis imperdiet mauris. Curabitur lacinia, lorem sit amet malesuada auctor, eros lorem venenatis nibh, a imperdiet lorem diam ut lorem. Pellentesque luctus mauris ut justo mattis eleifend. Cras placerat pretium felis, id sagittis dui. Pellentesque eget nunc nec dui bibendum fringilla.</string>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -1435,7 +1434,7 @@ http://applets.etsmtl.ca</string>
                                                 <constraint firstAttribute="width" constant="212" id="jOy-df-W6I"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ieR-hk-fGL">
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ieR-hk-fGL">
                                             <rect key="frame" x="20" y="56" width="715" height="12"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <constraints>
@@ -1477,7 +1476,7 @@ http://applets.etsmtl.ca</string>
                                     <rect key="frame" x="0.0" y="0.0" width="735" height="259"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="500" text="Titre asdfsadf hsajdbfjbs dkjfbkjashbdfkjhabsdkjfhbkjasdhf" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="715" translatesAutoresizingMaskIntoConstraints="NO" id="fcf-W7-Bgw">
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="500" text="" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="715" translatesAutoresizingMaskIntoConstraints="NO" id="fcf-W7-Bgw">
                                             <rect key="frame" x="20" y="5" width="715" height="43"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <constraints>
@@ -1487,14 +1486,13 @@ http://applets.etsmtl.ca</string>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="715" translatesAutoresizingMaskIntoConstraints="NO" id="3c5-oa-RBf">
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="715" translatesAutoresizingMaskIntoConstraints="NO" id="3c5-oa-RBf">
                                             <rect key="frame" x="20" y="76" width="715" height="163"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <string key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rhoncus scelerisque accumsan. Integer quis aliquet quam, id facilisis urna. Mauris sodales, purus quis congue tempor, nulla magna rhoncus massa, sit amet rhoncus ante lorem hendrerit tortor. Ut libero lorem, lacinia vitae nunc quis, iaculis imperdiet mauris. Curabitur lacinia, lorem sit amet malesuada auctor, eros lorem venenatis nibh, a imperdiet lorem diam ut lorem. Pellentesque luctus mauris ut justo mattis eleifend. Cras placerat pretium felis, id sagittis dui. Pellentesque eget nunc nec dui bibendum fringilla.</string>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="Date" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="715" translatesAutoresizingMaskIntoConstraints="NO" id="d6f-XS-ft6">
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="715" translatesAutoresizingMaskIntoConstraints="NO" id="d6f-XS-ft6">
                                             <rect key="frame" x="20" y="56" width="715" height="12"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <constraints>
