--- a/ETSMobile/Base.lproj/Main_iPhone.storyboard
+++ b/ETSMobile/Base.lproj/Main_iPhone.storyboard
@@ -532,9 +532,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Rechercher" id="RHc-mt-wYo">
+                            <rect key="frame" x="0.0" y="64" width="320" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="lDD-UG-AbV" id="cm7-DG-TeA"/>
+                            </connections>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MoodleIdentifier" id="LR2-Vd-Rat">
-                                <rect key="frame" x="0.0" y="119" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="163" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="LR2-Vd-Rat" id="zVd-9V-k1v">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -552,8 +560,28 @@
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="JHH-NR-9YE">
                         <autoresizingMask key="autoresizingMask"/>
                     </refreshControl>
+                    <connections>
+                        <outlet property="searchDisplayController" destination="qZq-gh-KTE" id="GPj-4I-Joq"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xp2-k5-RgA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="wqy-wj-TkF">
+                    <connections>
+                        <outlet property="delegate" destination="lDD-UG-AbV" id="xFY-fB-czh"/>
+                        <outlet property="searchContentsController" destination="lDD-UG-AbV" id="kcm-Db-VcS"/>
+                        <outlet property="searchResultsDataSource" destination="lDD-UG-AbV" id="Htd-ra-aMj"/>
+                        <outlet property="searchResultsDelegate" destination="lDD-UG-AbV" id="QFW-fO-wb5"/>
+                    </connections>
+                </searchDisplayController>
+                <searchDisplayController id="qZq-gh-KTE">
+                    <connections>
+                        <outlet property="delegate" destination="lDD-UG-AbV" id="yFO-bx-gIj"/>
+                        <outlet property="searchBar" destination="RHc-mt-wYo" id="u66-io-GrF"/>
+                        <outlet property="searchContentsController" destination="lDD-UG-AbV" id="Wks-r7-8rE"/>
+                        <outlet property="searchResultsDataSource" destination="lDD-UG-AbV" id="lGn-Qy-b2p"/>
+                        <outlet property="searchResultsDelegate" destination="lDD-UG-AbV" id="tRA-eV-xBz"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="-477" y="-4388"/>
         </scene>
